--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,24 +33,21 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    // Android necessities
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
 
-    // Google APIs
+    // Google Maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.maps.android:android-maps-utils:2.1.0'
     implementation 'com.google.maps.android:maps-utils-ktx:2.2.0'
 
-    // Amplify plugins
-    implementation 'com.amplifyframework:aws-api:1.4.1'
-    implementation 'com.amplifyframework:aws-datastore:1.4.1'
-
     // Support for Java 8 features
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
 
     // Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
