--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'com.google.android.material:material:1.2.1'
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
-
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
@@ -56,6 +52,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.maps.android:android-maps-utils:2.1.0'
     implementation 'com.google.maps.android:maps-utils-ktx:2.2.0'
+
+    // Image Choose
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.4.1'
+    implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.4.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     // Support for Java 8 features
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
