--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:imagepicker:2.4.1'
     implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.4.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     // Support for Java 8 features
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
