--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,12 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    //User authentication
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
+//    implementation 'com.facebook.android:facebook-android-sdk:4.1'
+//    implementation 'com.twitter.sdk.android:twitter-core:3.1'
 
-    // Image Choose
+    // Image Chooser
     implementation 'com.github.esafirm.android-image-picker:imagepicker:2.4.1'
     implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.4.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
