--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-firestore:22.0.0'
     //User authentication
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 //    implementation 'com.facebook.android:facebook-android-sdk:4.1'
